--- a/style.css
+++ b/style.css
@@ -84,7 +84,13 @@ html, body {
     border: none;
     padding: 2px 6px;
     cursor: pointer;
+    border-radius: 10%;
+    transition-duration: 0.4s;
 }
+.button:hover {
+    background-color: #04AA6D;
+    color: white;
+  }
 
 .minButton {
     position: absolute;
